compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__todo__named.snap
---
source: compiler-core/src/erlang/tests/todo.rs
expression: "\npub fn main() {\n  todo as \"testing\"\n}\n"
---
----- SOURCE CODE

pub fn main() {
  todo as "testing"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> any().
main() ->
    erlang:error(#{rakun_error => todo,
            message => <<"testing"/utf8>>,
            module => <<"my/mod"/utf8>>,
            function => <<"main"/utf8>>,
            line => 3}).
