compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__todo__piped.snap
---
source: compiler-core/src/erlang/tests/todo.rs
assertion_line: 52
expression: "\n     pub fn main() {\n      \"lets\"\n      |> todo as \"pipe\"\n      |> todo as \"other todo\"\n    }\n    "
---
----- SOURCE CODE

     pub fn main() {
      "lets"
      |> todo as "pipe"
      |> todo as "other todo"
    }
    

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> any().
main() ->
    _pipe = <<"lets"/utf8>>,
    _pipe@1 = (erlang:error(#{rakun_error => todo,
            message => <<"pipe"/utf8>>,
            module => <<"my/mod"/utf8>>,
            function => <<"main"/utf8>>,
            line => 4}))(_pipe),
    (erlang:error(#{rakun_error => todo,
            message => <<"other todo"/utf8>>,
            module => <<"my/mod"/utf8>>,
            function => <<"main"/utf8>>,
            line => 5}))(_pipe@1).
